Adicionado endpoint para visualização do resultado da pauta
